# UnityRAG

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  banner.txt  codex_notes.md  config.docker.yaml  config.yaml  pyproject.toml  setup.bat  setup.sh  start_server.bat  start_server.sh
.githooks/: pre-commit
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/workflows/: ci.yml  docker-publish.yml
benchmarks/eval/: unity_queries_v1.jsonl
demo/: ad_demo_onepager.html  ad_demo_readme.html
docs/: README.md  WEEK1_EXECUTION.md  codex_notes.md  docker_http_clients.md  requirements.md
docs/internal/: codex_notes.md  improvements.md
examples/: claude_desktop_config.json  claude_desktop_config_unix.json  codex_mcp_config.json  codex_mcp_config_unix.json
scripts/: check_no_data_tracked.py  install_mcp_config.py  unitydocs_bake.py  unitydocs_index.py  unitydocs_mcp.py  unitydocs_setup.py
src/unity_docs_mcp/: __init__.py  cli.py  config.py  doctor.py  mcp_server.py  paths.py  report.py
src/unity_docs_mcp/bake/: bake_cli.py  chunker.py  extract_manual.py  extract_scriptref.py  html_to_md.py  link_graph.py  types.py
src/unity_docs_mcp/bench/: __init__.py  benchmark_cli.py
src/unity_docs_mcp/index/: embed.py  fts.py  index_cli.py  search.py  vector_store.py
src/unity_docs_mcp/setup/: bootstrap.py  detect_version.py  diagnostics.py  download.py  ensure_artifacts.py  mcp_config.py  unity_detect.py  unzip.py
src/unity_docs_mcp/tools/: ops.py
tests/: conftest.py  test_benchmark_cli.py  test_bootstrap.py  test_config_loading.py  test_doctor.py  test_extraction.py  test_fts_only_mode.py  test_fts_query_fallback.py  test_fts_weighted_fields.py  test_mcp_config.py  test_mcp_meta.py  test_ops_open_path_lookup.py  test_ops_related_modes.py  test_ops_resolve_symbol.py  test_report.py  test_setup_diagnostics.py  test_setup_recovery.py  test_unity_detect.py  test_unzip_filtering.py
tests/fixtures/: manual_index.html  scriptref_iJobParallelFor.html
